--- a/hyperapp2-test/src/main.scss
+++ b/hyperapp2-test/src/main.scss
@@ -77,6 +77,12 @@ p {
   }
 
   margin-bottom: 4ch;
+
+  .selected {
+    border: 4px solid yellow;
+    z-index: 1;
+    padding: 6px;
+  }
 }
 
 .unit-info {
