--- a/hyperapp2-test/src/main.scss
+++ b/hyperapp2-test/src/main.scss
@@ -80,6 +80,18 @@ p {
 
   .selected {
     border: 4px solid yellow;
+    z-index: 2;
+    padding: 6px;
+  }
+
+  .move-target {
+    border: 4px solid cyan;
+    z-index: 1;
+    padding: 6px;
+  }
+
+  .attack-target {
+    border: 4px solid red;
     z-index: 1;
     padding: 6px;
   }
