Rough remove animationg

--- a/hyperapp2-test/src/main.scss
+++ b/hyperapp2-test/src/main.scss
@@ -41,9 +41,90 @@ p {
   animation-name: flash;
 }
 
+@keyframes flash-out {
+  to,
+  from,
+  30% {
+    background-color: 0;
+  }
+
+  15% {
+    opacity: 1;
+  }
+}
+
+.flash-out {
+  animation-name: flash-out;
+}
+
+@keyframes headShake {
+  0% {
+    transform: translateX(0);
+  }
+
+  6.5% {
+    transform: translateX(-6px) rotateY(-9deg);
+  }
+
+  18.5% {
+    transform: translateX(5px) rotateY(7deg);
+  }
+
+  31.5% {
+    transform: translateX(-3px) rotateY(-5deg);
+  }
+
+  43.5% {
+    transform: translateX(2px) rotateY(3deg);
+  }
+
+  50% {
+    transform: translateX(0);
+  }
+}
+
+.headShake {
+  animation-timing-function: ease-in-out;
+  animation-name: headShake;
+}
+
+@keyframes scale-in {
+  from {
+    transform: scale(0);
+  }
+
+  80% {
+    transform: scale(1.1);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+.scale-in {
+  animation-timing-function: ease-in-out;
+  animation-name: scale-in;
+}
+
+@keyframes scale-out {
+  to {
+    transform: scale(0);
+  }
+}
+
+.scale-out {
+  animation-timing-function: ease-in-out;
+  animation-name: scale-out;
+}
+
 .animated {
   animation-duration: 1s;
   animation-fill-mode: both;
+}
+
+.animated.fast {
+  animation-duration: 200ms;
 }
 
 .animated.infinite {
